--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,10 @@ readme = "README.md"
 python = "^3.12"
 fastapi = "^0.110.0"
 uvicorn = "^0.29.0"
+sqlalchemy = "^2.0.29"
+pydantic-settings = "^2.2.1"
+alembic = "^1.13.1"
+psycopg = {extras = ["binary"], version = "^3.1.18"}
 
 
 [tool.poetry.group.dev.dependencies]
