--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ sqlalchemy = "^2.0.29"
 pydantic-settings = "^2.2.1"
 alembic = "^1.13.1"
 psycopg = {extras = ["binary"], version = "^3.1.18"}
+jinja2 = "^3.1.3"
 
 
 [tool.poetry.group.dev.dependencies]
