--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,7 +40,7 @@ pythonpath = "."
 extend-exclude = '(migrations/)'
 
 [tool.taskipy.tasks]
-lint = 'ruff . && blue --check . --diff'
+lint = 'ruff check . && blue --check . --diff'
 format = 'blue .  && isort .'
 run = 'uvicorn site_ong.main:app --reload'
 pre_test = 'task lint'
