--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ sqlalchemy = "^2.0.29"
 pydantic-settings = "^2.2.1"
 alembic = "^1.13.1"
 psycopg = {extras = ["binary"], version = "^3.1.18"}
+jinja2 = "^3.1.3"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -39,7 +40,7 @@ pythonpath = "."
 extend-exclude = '(migrations/)'
 
 [tool.taskipy.tasks]
-lint = 'ruff . && blue --check . --diff'
+lint = 'ruff check . && blue --check . --diff'
 format = 'blue .  && isort .'
 run = 'uvicorn site_ong.main:app --reload'
 pre_test = 'task lint'
