--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,9 @@ pydantic-settings = "^2.2.1"
 alembic = "^1.13.1"
 psycopg = {extras = ["binary"], version = "^3.1.18"}
 jinja2 = "^3.1.3"
+pyjwt = "^2.8.0"
+passlib = {extras = ["bcrypt"], version = "^1.7.4"}
+python-multipart = "^0.0.9"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -23,6 +26,7 @@ taskipy = "^1.12.2"
 blue = "^0.9.1"
 ruff = "^0.3.4"
 isort = "^5.13.2"
+httpx = "^0.27.0"
 
 [tool.ruff]
 line-length = 79
@@ -44,7 +48,7 @@ lint = 'ruff check . && blue --check . --diff'
 format = 'blue .  && isort .'
 run = 'uvicorn site_ong.main:app --reload'
 pre_test = 'task lint'
-test = 'pytest -s -x --cov=src -vv'
+test = 'pytest -s -x --cov=site_ong -vv'
 post_test = 'coverage html'
 
 [build-system]
