--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ jinja2 = "^3.1.3"
 pyjwt = "^2.8.0"
 passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 python-multipart = "^0.0.9"
+typer = "^0.12.3"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -26,6 +27,9 @@ blue = "^0.9.1"
 ruff = "^0.3.4"
 isort = "^5.13.2"
 httpx = "^0.27.0"
+
+[tool.poetry.scripts]
+admin = "cli:app"
 
 [tool.ruff]
 line-length = 79
